k8s/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: medflow
  labels:
    app: mongo-express
spec:
  type: ClusterIP
  selector:
    app: mongo-express
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
